# jot-deck

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  sonar-project.properties
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml  cleanup.rs  lib.rs  models.rs
crates/core/repository/: card.rs  deck.rs  mod.rs  tag.rs
docs/: 000-spec.md  001-keybindings.md  002-data-structure.md  003-roadmap.md  004-e2e-testing.md  005-ai-integration.md
src/: cleanup.rs  db.rs  error.rs  lib.rs
src/repository/: card.rs  column.rs  deck.rs  tag.rs
